<resources>
    <string name="app_name">Unwheeze</string>

    <string name="bluetoothDeviceName">MyESP32</string>
    <string name="serviceBtUuid">6E400001-B5A3-F393-E0A9-E50E24DCCA9E</string>
    <string name="characWriteBtUuid">6E400002-B5A3-F393-E0A9-E50E24DCCA9E</string>
    <string name="characReadBtUuid">6E400003-B5A3-F393-E0A9-E50E24DCCA9E</string>
    <string name="descriptorReadBtUid">00002902-0000-1000-8000-00805f9b34fb</string>

    <string name="shared_prefs_file_key">250e0554f52-e5fe0f5d</string>
    <string name="shared_prefs_file_current_coarse_location">CURRENT_LOCATION</string>
    <string name="shared_prefs_file_current_coarse_longitude">CURRENT_LONGITUDE</string>
    <string name="shared_prefs_file_current_coarse_latitude">CURRENT_LATITUDE</string>
    <string name="shared_prefs_file_api_key">API_KEY</string>

    <string name="countryName">France</string>

    <string name="WsServiceDescription">This service allows realtime flow of airdata to be
        displayed on the map</string>

    <string name="websocketDataReceivedIntent">com.unwheeze.ws.DATA_RECEIVED</string>

    <string name="connectToDeviceFab">Connect to device</string>
    <string name="connectedBteFabLabel">Connected to </string>
    <string name="scanningBte">Scanning...</string>
    <string name="scheduledScan">Measure every 30 seconds</string>
    <string name="periodicallyScanning">Measuring periodically (30s)...</string>

    <string name="pm10TitleLabel">PM10</string>
    <string name="pm25TitleLabel">PM2.5</string>
    <string name="no2TitleLabel">PM1</string>
    <string name="measureUnit">mg/m²</string>

    <string name="happyEmojiLabel">GOOD</string>
    <string name="neutralEmojiLabel">AVERAGE</string>
    <string name="sadEmojiLabel">BAD</string>

    <string name="titleSampleDetails">MEASURE DETAILS</string>
    <string name="titleMeasureDetails">INSTANT MEASURE</string>

    <string name="airDetailsActivityTitle">Details</string>

    <string name="toolbarSearch">Search</string>
    <string name="toolbarProfile">Profile</string>
    <string name="toolbarRefresh">Refresh</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="errorTitlePopup">Oh snap!</string>
    <string name="scanFailedError">The scan failed. Make sure your device is turned on and try again.</string>
    <string name="btNotInitError">The scan couldn\'t start. Did you enable both Bluetooth and Location services ?</string>
    <string name="locationNullError">Ops ! We couldn\'t retrieve your location. Make sure the location service is enabled!</string>
    <string name="locationPemrmissionError">Sorry, we cannot offer our services if you don\'t do any concession !</string>
    <string name="problemRetrievingError">There was a problem retrieving the data. Check your internet connection. Our database is maybe empty at the moment!</string>

    <string name="warningTitlePopup">Good lord!</string>
    <string name="warningNotImplemented">Did you think that was the only project we have ? This feature will be implemented soon!</string>

    <string name="errorNetwork">There was a network error while loading.</string>
    <string name="okBtn">OK</string>
</resources>
