<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:id="@+id/measureBottomSheet"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/floralBlue">



        <ProgressBar
            android:id="@+id/pm10ProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/progressBarSize"
            android:layout_height="@dimen/progressBarSize"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:max="1000"
            android:progress="120"
            android:progressDrawable="@drawable/circular_progressbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pm10TitleLabel"
            android:text="@string/pm10TitleLabel"
            style="@style/titleLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            app:layout_constraintEnd_toEndOf="@+id/pm10ProgressBar"
            app:layout_constraintStart_toStartOf="@+id/pm10ProgressBar"
            app:layout_constraintTop_toBottomOf="@+id/pm10ProgressBar"
            tools:text="PM10" />

        <TextView
            android:id="@+id/pm10Value"
            android:text="120"
            style="@style/measureValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toTopOf="@+id/pm10TitleLabel"
            app:layout_constraintEnd_toEndOf="@+id/pm10ProgressBar"
            app:layout_constraintStart_toStartOf="@+id/pm10ProgressBar"
            app:layout_constraintTop_toTopOf="@+id/pm10ProgressBar"
            tools:text="120" />

        <TextView
            android:id="@+id/measureUnitLabel1"
            style="@style/titleLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/measureUnit"
            android:textSize="@dimen/measureUnitSize"
            app:layout_constraintEnd_toEndOf="@+id/pm10Value"
            app:layout_constraintStart_toStartOf="@+id/pm10Value"
            app:layout_constraintTop_toBottomOf="@+id/pm10Value" />

        <ProgressBar
            android:id="@+id/pm25ProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/progressBarSize"
            android:layout_height="@dimen/progressBarSize"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:max="1000"
            android:progress="250"
            android:progressDrawable="@drawable/circular_progressbar"
            app:layout_constraintStart_toEndOf="@+id/pm10ProgressBar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pm25TitleLabel"
            android:text="@string/pm25TitleLabel"
            style="@style/titleLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            app:layout_constraintEnd_toEndOf="@+id/pm25ProgressBar"
            app:layout_constraintStart_toStartOf="@+id/pm25ProgressBar"
            app:layout_constraintTop_toBottomOf="@+id/pm25ProgressBar"
            tools:text="PM25" />

        <TextView
            android:id="@+id/pm25Value"
            android:text="250"
            style="@style/measureValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toTopOf="@+id/pm25TitleLabel"
            app:layout_constraintEnd_toEndOf="@+id/pm25ProgressBar"
            app:layout_constraintStart_toStartOf="@+id/pm25ProgressBar"
            app:layout_constraintTop_toTopOf="@+id/pm25ProgressBar"
            tools:text="250" />

        <TextView
            android:id="@+id/measureUnitLabel2"
            style="@style/titleLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/measureUnit"
            android:textSize="@dimen/measureUnitSize"
            app:layout_constraintEnd_toEndOf="@+id/pm25Value"
            app:layout_constraintStart_toStartOf="@+id/pm25Value"
            app:layout_constraintTop_toBottomOf="@+id/pm25Value" />

        <ProgressBar
            android:id="@+id/no2ProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/progressBarSize"
            android:layout_height="@dimen/progressBarSize"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:max="1000"
            android:progress="850"
            android:progressDrawable="@drawable/circular_progressbar"
            app:layout_constraintStart_toEndOf="@+id/pm25ProgressBar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/no2TitleLabel"
            android:text="@string/no2TitleLabel"
            style="@style/titleLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            app:layout_constraintEnd_toEndOf="@+id/no2ProgressBar"
            app:layout_constraintStart_toStartOf="@+id/no2ProgressBar"
            app:layout_constraintTop_toBottomOf="@+id/no2ProgressBar"
            tools:text="PM25" />

        <TextView
            android:id="@+id/no2Value"
            style="@style/measureValues"
            android:text="1000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toTopOf="@+id/no2TitleLabel"
            app:layout_constraintEnd_toEndOf="@+id/no2ProgressBar"
            app:layout_constraintStart_toStartOf="@+id/no2ProgressBar"
            app:layout_constraintTop_toTopOf="@+id/no2ProgressBar"
            tools:text="1000" />

        <TextView
            android:id="@+id/measureUnitLabel3"
            style="@style/titleLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/measureUnit"
            android:textSize="@dimen/measureUnitSize"
            app:layout_constraintEnd_toEndOf="@+id/no2Value"
            app:layout_constraintStart_toStartOf="@+id/no2Value"
            app:layout_constraintTop_toBottomOf="@+id/no2Value" />



        <ImageView
            android:id="@+id/resultEmoji"
            android:layout_width="@dimen/resultEmojiSize"
            android:layout_height="@dimen/resultEmojiSize"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/no2ProgressBar"
            app:layout_constraintTop_toTopOf="@+id/no2ProgressBar"
            app:srcCompat="@drawable/ic_neutral_icon_24px" />

        <TextView
            android:id="@+id/resultVerbose"
            android:text="@string/neutralEmojiLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            style="@style/titleLabels"
            app:layout_constraintEnd_toEndOf="@+id/resultEmoji"
            app:layout_constraintStart_toStartOf="@+id/resultEmoji"
            app:layout_constraintTop_toBottomOf="@+id/resultEmoji"
            tools:text="AVERAGE" />


        <ImageView
            android:id="@+id/sampleDetailsLocationIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pm10TitleLabel"
            app:srcCompat="@drawable/ic_location_on_grey_24px" />

        <TextView
            android:id="@+id/sampleDetailsLocationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/sampleDetailsLocationIcon"
            app:layout_constraintStart_toEndOf="@+id/sampleDetailsLocationIcon"
            app:layout_constraintTop_toTopOf="@+id/sampleDetailsLocationIcon"
            android:textSize="18sp"
            android:textColor="@color/floralWhite"
            android:fontFamily="sans-serif-light"
            tools:text="35.4789,-5.66496 - Lille, France" />

        <ImageView
            android:id="@+id/sampleDetailsTimeIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sampleDetailsLocationIcon"
            app:srcCompat="@drawable/ic_access_time_white_24px" />

        <TextView
            android:id="@+id/sampleDetailsTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/floralWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/sampleDetailsTimeIcon"
            app:layout_constraintStart_toEndOf="@+id/sampleDetailsTimeIcon"
            app:layout_constraintTop_toTopOf="@+id/sampleDetailsTimeIcon"
            tools:text="17 avril 2019 - 18:54:35" />

        <ImageView
            android:id="@+id/sampleDetailsSeeMoreBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_more_horiz_white_24px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />



    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>